CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_eligty_detail_hist__x.object
<CustomObject>
    <description>batchsit$t_indiv_eligty_detail_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_eligty_detail_hist</externalName>
    <fields>
        <fullName>cde_reason_change_eligty__c</fullName>
        <description>cde_reason_change_eligty</description>
        <externalDeveloperName>cde_reason_change_eligty</externalDeveloperName>
        <label>Eligibility Change Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_detail_eligty_indiv__c</fullName>
        <description>cde_status_detail_eligty_indiv</description>
        <externalDeveloperName>cde_status_detail_eligty_indiv</externalDeveloperName>
        <label>Eligibility Indiv Detail Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_detail_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Family Composition Eligibility ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_detail__c</fullName>
        <description>idn_indiv_eligty_detail</description>
        <externalDeveloperName>idn_indiv_eligty_detail</externalDeveloperName>
        <label>Individual Eligibility ID detail</label>
        <length>50</length>
        <referenceTo>batchsit_t_indiv_eligty_detail__x</referenceTo>
        <relationshipLabel>Individual Eligibility Detail Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_detail_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_detail_hist__c</fullName>
        <description>idn_indiv_eligty_detail_hist</description>
        <externalDeveloperName>idn_indiv_eligty_detail_hist</externalDeveloperName>
        <label>Individual Eligibility ID detail History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Family Composition Individual ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Change By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_detail_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_ovrd_data__c</fullName>
        <description>ind_ovrd_data</description>
        <externalDeveloperName>ind_ovrd_data</externalDeveloperName>
        <label>Override Data Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_detail_eligty_indiv__c</fullName>
        <description>nbr_seq_detail_eligty_indiv</description>
        <externalDeveloperName>nbr_seq_detail_eligty_indiv</externalDeveloperName>
        <label>Eligibility Indiv Detail Number Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>History Number Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Individual Eligibility Detail History</label>
    <pluralLabel>Individual Eligibility Detail History</pluralLabel>
</CustomObject>